welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:5: error: type mismatch;
 found   : Int
 required: Boolean
    if (nums(i)==u && nums(i-1)==u && nums(i-2)){
                                          ^